@@ -86,6 +86,7 @@ ADD_MENU_TEXT_ITEM("Audio Settings ...",              __A_CONFIG, "audio")
 ADD_MENU_TEXT_ITEM("Group Settings ...",              __A_CONFIG, "group_defaults")
 ADD_MENU_TEXT_ITEM("Special FX Settings ...",         __A_CONFIG, "fx")
 ADD_MENU_TEXT_ITEM("Desktop Background Settings ...", __A_CONFIG, "bg")
+ADD_MENU_TEXT_ITEM("KDE Support Settings ...",        __A_CONFIG, "kde")
 ADD_MENU_TEXT_ITEM("Create New Iconbox",              __A_CREATE_ICONBOX, "")
 ADD_MENU_TEXT_ITEM("Legacy E-conf tool ...",          __A_EXEC, "e-conf")
 END_MENU
