@@ -2577,3 +2577,11 @@ Thu Sep 30 20:43:54 PDT 1999
 (Mandrake)
 
 fixed a warning caused in borders.c due to lack of a cast
+
+-------------------------------------------------------------------------------
+
+Thu Sep 30 22:36:37 PDT 1999
+(Mandrake)
+
+added KDE Support config dialog
+
